# repo2llm

./: .gitignore  README.md  pyproject.toml  repo_prompt.txt  requirements.txt
repo2llm/: .gitignore  cli.py  crawler.py  formatter.py
repo2llm-gui/: index.html  main.js  package-lock.json  package.json  renderer.js
repo2llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
