[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2llm"
version = "0.1.0"
description = "Package your entire codebase into a single, LLM-friendly prompt."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pathspec>=0.11.0",
    "tiktoken>=0.6.0"
]

# This is the magic block that creates the global CLI command
[project.scripts]
repo2llm = "repo2llm.cli:main"